[tool.poetry]
name = "volttron-docs"
version = "0.1.0"
description = "VOLTTRON documentation"
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
readme = "README.md"
packages = [{include = "volttron-docs"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"
m2r2 = "0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
